--- a/static/css/artcommittee.webflow.css
+++ b/static/css/artcommittee.webflow.css
@@ -79,7 +79,7 @@ a.w--current {
 }
 
 .heading {
-  margin-top: 40px;
+  margin-top: 0px;
   font-family: 'Darker Grotesque', sans-serif;
   font-weight: 300;
 }
@@ -526,6 +526,37 @@ a.w--current {
   -ms-grid-columns: 0.5fr 0.25fr 0.25fr;
   grid-template-columns: 0.5fr 0.25fr 0.25fr;
   text-align: left;
+}
+
+.div-block-7 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.div-block-8 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 38px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.image-2 {
+  margin-right: 14px;
+}
+
+.text-block-5 {
+  color: #fff;
 }
 
 @media screen and (max-width: 991px) {
